	* Several network related files:  Changes from Max Holtzberg to improve
	  how network status is reported.  New controls to manage carrier
	  detect.  (2014-1-21).
	* configs/16z:  Add basic support for the 16z board. The 16z board is
	  based on the ZiLOG ZNEOZ16F2811AL20EG part.  See
	  https://github.com/toyaga/16z for further information (2014-1-22),
	* tools/Config.mk: 'cypath' must be called if we are using a Windows
	  native toolchain with the Cygwin 'make' to convert paths to proper
	  Windows paths.  From Richard Cochran (2014-1-23).
	* /arch/arm/src/Makefile: dependency directory list is now computed
	  from the VPATH.  From Richard Cochran (2014-1-23).
	* arch/arm/src/efm32 and include/efm32:  Basic support for the EFM3
	  processor family from Richarc Cochran (2014-1-23).
	* configs/efm32-dk3650:  This is Energy Micro's development kit for
	  the Leopard Gecko MCU, which is an ARM Cortex-M3 device.  From Richard
	  Cochran (2014-1-23).
	* arch/arm/src/armv7-m/up_memcpy.S: Assembler changes with the gcc-47
	  distribution from ARM mean that we need to be explicit about branch
	  sizes; one or more of the wide branch opcodes results in bad table
	  branching.  From Mike Smith (2014-1-23).
	* Many files: renamed up_buttoninit() to board_button_initialize to
	  better conform to the naming standard.  Now ONLY prototypes in
	  include/nuttx/arch.h (2014-1024).
	* Rename up_buttons() to board_buttons() for the same reason (2014-
	  1-14).
	* Rename up_irqbutton() to board_button_irq() (2014-1-24).
	* Rename up_ledinit() to board_led_intialize() (2014-1-24).
	* Rename up_ledon() to board_led_on() and up_ledoff() to board_led_off()
	  (2014-1-24).
	* arch/x86/src/qemu-i486/gemu_head.S:  Patch from Matt Campbell
	  to fix 'Error: .size expression for idle_stack does not evaluate to
	  a constant" (2014-1-25).
	* arch/arm/include/efm32, arch/arm/src/efm32, and configs/efm32-dk360:
	  Removed all EFM32 support.  Not yet readyto be fielded (2014-1-17).
