@@ -1,7 +1,7 @@
 /****************************************************************************
  * arch/arm/src/sama5/sam_boot.c
  *
- *   Copyright (C) 2013 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2013-2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -627,9 +627,9 @@ void up_boot(void)
 
   sam_clockconfig();
 
+#ifdef CONFIG_ARCH_FPU
   /* Initialize the FPU */
 
-#ifdef CONFIG_ARCH_FPU
   arm_fpuconfig();
 #endif
 
@@ -645,20 +645,20 @@ void up_boot(void)
 
   sam_boardinitialize();
 
+#ifdef NEED_SDRAM_REMAPPING
   /* SDRAM was configured in a temporary state to support low-level
    * initialization.  Now that the SDRAM has been fully initialized,
    * we can reconfigure the SDRAM in its final, fully cache-able state.
    */
 
-#ifdef NEED_SDRAM_REMAPPING
   sam_remap();
 #endif
 
+#ifdef CONFIG_BOOT_SDRAM_DATA
   /* If .data and .bss reside in SDRAM, then initialize the data sections
    * now after SDRAM has been initialized.
    */
 
-#ifdef CONFIG_BOOT_SDRAM_DATA
   arm_data_initialize();
 #endif
 
@@ -666,21 +666,21 @@ void up_boot(void)
 
   sam_lowsetup();
 
+#ifdef USE_EARLYSERIALINIT
   /* Perform early serial initialization if we are going to use the serial
    * driver.
    */
 
-#ifdef USE_EARLYSERIALINIT
   sam_earlyserialinit();
 #endif
 
+#ifdef CONFIG_NUTTX_KERNEL
   /* For the case of the separate user-/kernel-space build, perform whatever
    * platform specific initialization of the user memory is required.
    * Normally this just means initializing the user space .data and .bss
    * segments.
    */
 
-#ifdef CONFIG_NUTTX_KERNEL
   sam_userspace();
 #endif
 }
